--- a/compose.yml
+++ b/compose.yml
@@ -34,6 +34,20 @@ services:
         - .:/var/www/html
       networks:
         - laravel
+  queue:
+      container_name: queue-system-api
+      image: system-laravel-10
+      restart: unless-stopped
+      working_dir: /var/www/html/
+      command: ['sh', '-c', 'php artisan horizon']
+      mem_limit: 400M # It can be removed if there is no need memory limit
+      depends_on:
+        - app
+        - db
+      volumes:
+        - .:/var/www/html
+      networks:
+        - laravel
 
   db:
     container_name: laravel-system-db
