--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,10 @@
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
         "laravel/horizon": "^5.30",
+        "laravel/jetstream": "^4.3",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
+        "livewire/livewire": "^3.0",
         "spatie/laravel-permission": "^6.15"
     },
     "require-dev": {
