--- a/.env.example
+++ b/.env.example
@@ -13,13 +13,13 @@ APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
 
-LOG_CHANNEL=stack
+LOG_CHANNEL=daily
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
+DB_CONNECTION=pgsql
+DB_HOST=db
+DB_PORT=5432
 DB_DATABASE=laravel
 DB_USERNAME=root
 DB_PASSWORD=
@@ -27,18 +27,18 @@ DB_PASSWORD=
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DISK=local
-QUEUE_CONNECTION=sync
+QUEUE_CONNECTION=redis
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
 
 MEMCACHED_HOST=127.0.0.1
 
-REDIS_HOST=127.0.0.1
+REDIS_HOST=cache
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=mailpit
+MAIL_HOST=mail
 MAIL_PORT=1025
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
