--- a/compose.yml
+++ b/compose.yml
@@ -39,7 +39,7 @@ services:
       image: system-laravel-10
       restart: unless-stopped
       working_dir: /var/www/html/
-      command: ['sh', '-c', 'php artisan horizon']
+      command: ['sh', '-c', 'composer install && php artisan migrate && php artisan db:seed && npm run build && php artisan horizon']
       mem_limit: 400M # It can be removed if there is no need memory limit
       depends_on:
         - app
