feat: added crud event

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-DOCKER_USER_ID= # Your user id, if used windows not need it
-DOCKER_GROUP_ID= #Your group id, if used windows not need it
+DOCKER_USER_ID=1000
+DOCKER_GROUP_ID=1000
 DOCKER_HTTP_PORT=80
 DOCKER_DB_PORT=5432
 DOCKER_FPM_PORT=9000
