--- a/compose.yml
+++ b/compose.yml
@@ -34,6 +34,7 @@ services:
         - .:/var/www/html
       networks:
         - laravel
+
   queue:
       container_name: queue-system-api
       image: system-laravel-10
@@ -79,6 +80,7 @@ services:
     container_name: laravel-system-mail
     image: 'mailhog/mailhog:latest'
     mem_limit: 400M
+    restart: unless-stopped
     ports:
         - ${DOCKER_MAIL_SMTP_PORT}:1025
         - ${DOCKER_MAIL_HTTP_PORT}:8025
